--- a/huracan/458ITA.HTML
+++ b/huracan/458ITA.HTML
@@ -4,17 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dark Mode</title>
+    <title>458</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css"
     />
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/458ita.css" />
     <script src="js/scripts.js" defer></script>
   </head>
   <body>
     <header>
-      <h2>Lamborghini</h2>
+      <h2>Ferrari 458</h2>
       <div>
         <input type="checkbox" name="change-theme" id="change-theme" />
         <label for="change-theme">
@@ -26,17 +26,17 @@
     <main>
       <div class="card">
         <div class="card-image">
-          <span>Huracán</span>
-          <img src="img/pngegg.png" alt="Tenis" />
+          <span>458<i>italia</i></span>
+          <img src="img/2016-ferrari-458-italia-speciale.png" alt="Tenis" />
         </div>
         <div class="card-details">
-          <h2>lamborghini huracán</h2>
+          <h2>Ferrari 458</h2>
           <p class="subtitle">Excelente para as Ruas</p>
           <p class="description">
-            O Huracán mantém o motor Audi/Lamborghini V10 de 5,2 L do Gallardo, sintonizado por 610 ps (449 kW; 602 hp). Para garantir seu equilíbrio e desempenho, o carro é de motor médio. O V10 possui injeção direta de combustível e injeção de combustível de vários pontos.
+            A Ferrari 458 tinha motor F136, desenvolvido em parceria com a Maserati e fabricado a partir de 2001. O projeto envolve uma gama de motores V8 de 90 graus com aspiração natural.
           </p>
           <div class="price-container">
-            <span class="price">R$4.100.000</span>
+            <span class="price">R$3.017.237,00</span>
             <button class="btn">Comprar</button>
           </div>
         </div>
