--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Minha Loja de Carros</h1>
+        <h1></h1>
     </header>
     <nav>
         <a href="#home">Home</a>
@@ -16,24 +16,45 @@
         <a href="#contato">Contato</a>
     </nav>
     <div class="container" id="home">
-        <h2>Bem-vindo à Minha Loja de Carros</h2>
+        <h2>Comparar Carros</h2>
         <p>Encontre o carro dos seus sonhos conosco.</p>
     </div>
     <div class="container" id="carros">
         <h2>Carros Disponíveis</h2>
         <div class="car">
             <h3>Lamborghini Huracán</h3>
-            <p></p>
-            <p>Preço: R$4.100.000</p>
-            <a href="huracan/index.html">Veja Mais</a>
+            <p>
+                <strong>Potência:</strong>
+                640HP<br>
+                <strong>Velocidade Maxima:</strong>
+                325 km/h<BR>
+                <strong>Marca:</strong>
+                Lamborghini<br>
+                <strong>Ano:</strong>
+                2016<br>    
+            </p>
+            <br>
+            <p><strong>Preço:</strong>R$4.100.000,00</p>
+            <Br>
+            <a href="huracan/HURACAN.html"><strong>Saiba Mais</strong></a>
         </div>
         <div class="car">
-            <h3>Carro 2</h3>
-            <p>Descrição do carro 2.</p>
-            <p>Preço: $15,000</p>
-            <button>Comprar</button>
+            <h3>Ferrari 458 italia</h3>
+            <p>
+                <strong>Potência:</strong>
+                570HP<br>
+                <strong>Velocidade Maxima:</strong>
+                325 km/h<BR>
+                <strong>Marca:</strong>
+                Ferrari<br>
+                <strong>Ano:</strong>
+                2013<br>    
+            </p>
+            <br>
+            <p><strong>Preço:</strong>R$3.017.237,00</p>
+            <Br>
+            <a href="huracan/458ITA.HTML"><strong>Saiba Mais</strong></a>
         </div>
-    </div>
     <div class="container" id="contato">
         <h2>Entre em Contato</h2>
         <p>Para mais informações, entre em contato conosco pelo e-mail: contato@minhalojadecarros.com</p>
